--- a/portfolio/src/components/Home/Home.module.css
+++ b/portfolio/src/components/Home/Home.module.css
@@ -1,8 +1,12 @@
 .Home {
-    background: rgb(198,180,206);
-    background: linear-gradient(0deg, rgba(198,180,206,1) 0%, rgba(155,114,170,1) 26%, rgba(60,81,134,1) 100%);
+    /* background: rgb(198,180,206);
+    background: linear-gradient(0deg, rgba(198,180,206,1) 0%, rgba(155,114,170,1) 26%, rgba(60,81,134,1) 100%); */
+    background-image: url('../Images/Rainbow-Vortex.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
     display: flex;
-    height:630px;
+    height:90vh;
     padding-top: 80px;
     position: relative;
 }
