--- a/portfolio/src/components/Projects/Projects.module.css
+++ b/portfolio/src/components/Projects/Projects.module.css
@@ -1,4 +1,40 @@
-.Projects {
+.Project {
     background-color: black;
-
 }
+
+.Project .Projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+
+.Project .Paragraph {
+    width: 65%;
+}
+.Project .Thumbnail {
+    width: 70%;
+}
+
+.Project .ProjectContainer .Thumbnail img {
+    max-width: 490px;
+}
+
+.Project .ProjectContainer .Text {
+    padding-left: 3% ;
+    padding-right: 3%;
+}
+.Project .ProjectContainer .Thumbnail {
+    padding-left: 3% ;
+    padding-right: 3%;
+}
+.Project .ProjectContainer {
+    display: flex;
+    background-color: black;
+    margin-bottom: 5%;
+    height: 300px;
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px 1px white;
+    
+}
+
