--- a/portfolio/src/components/Skills/Skills.module.css
+++ b/portfolio/src/components/Skills/Skills.module.css
@@ -31,7 +31,7 @@
 }
 
 .Skills .image {
-    width: 200px;
+    max-width: 200px;
     display: block;
     margin-left: auto;
     margin-right: auto;
