--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -3,36 +3,36 @@ body {
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
-    font-family: 'Archivo', sans-serif;
+  font-family: "Archivo", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 html {
   scroll-behavior: smooth;
+  font-size: 14px;
 }
 
 h1 {
   font-weight: 900;
-  font-size: 45px;
   color: white;
-  
+  font-size: calc(1rem+3vw);
 }
 
 h2 {
   font-weight: 700;
-  font-size: 23px;
+  font-size: 1.4rem;
   color: white;
-
+  font-size: calc(1rem+1.5vw);
 }
 
 p {
   font-weight: 500px;
-  font-size: 21px;
-  color:white;
+  font-size: 1.3rem;
+  color: white;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
