--- a/portfolio/src/components/Home/Home.module.css
+++ b/portfolio/src/components/Home/Home.module.css
@@ -39,5 +39,12 @@
     right: 10%;
     top:20%;
     opacity: 0.3;
+    -webkit-animation:spin 50s linear infinite;
+    -moz-animation:spin 50s linear infinite;
+    animation:spin 50s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); }
 }
 
