added links etc

--- a/portfolio/src/components/About/About.module.css
+++ b/portfolio/src/components/About/About.module.css
@@ -30,6 +30,12 @@
     border-radius: 10%;
 }
 
+.AboutMe .btn {
+
+        text-decoration: none;
+    }
+
+
 @media only screen and (max-width: 500px) {
     .AboutMe .Container {
         flex-direction: column !important;
